95% functionality working commit

--- a/src/index.css
+++ b/src/index.css
@@ -41,3 +41,11 @@ body {
 #modulesListDiv {
     margin-top: 75px;
 }
+
+.col-4 {
+    background-color: black;
+}
+
+/*.lessonsNavigator {*/
+/*c*/
+/*}*/
